src/styles/components/_addux-pdf.scss
.addux-pdf{
    width:11in;
    height:8.5in;
    position:fixed;
    top:-8.5in;
    display:flex;
    flex-direction:column;
    padding:.3in;

    &__logo{
        width:20%;
        margin-bottom:.3in;
        margin-left:.2in;
    }

    &__columns{
        width:100%;
        display:flex;
        flex-grow:1;
    }

    &__footer{
        margin-top:.3in;
        margin-left:auto;
        font-family: 'Georgia', 'Times New Roman', Times, serif;
        font-size:12px;
    }
}

